--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/abiddarmawan/Tugas_Rpl_Impal#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
     "express-validator": "^6.14.2",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.25.3",
     "sqlite3": "^5.1.2"
   }
